Updated dependencies and fixed button appearance in navbar. Now they don't overlap or leave empty space

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,36 +1,24 @@
 .heading {
-  margin-top: -2%;
-  padding-top: 0;
-  margin-bottom: 0;
-  padding-bottom: 0;
+  margin-top: -2.5rem;
+  width: 100%;
   background-color: black;
   color: white;
   position: fixed;
-  z-index: 10;
 }
 
-Navbar {
-  width: 100%;
-  padding-top: -2.5%;
-  margin-top: -2.5%;
+div section {
+  background-color: black;
 }
 
 h1 {
   text-align: center;
-  margin-top: 0;
-  padding-top: 0;
+  margin: 0;
+  padding: 0;
   offset-position: 0;
   width: 100%;
 }
 
 .articleLists {
   background-color: black;
-  position: relative;
-  padding-top: 4%;
-  margin-top: 4%;
-}
-
-ArticleList {
-  width: 45%;
-  display: inline-block;
+  margin-top: 2.5rem;
 }
