--- a/Frontend/src/Components/ArticleList/ArticleList.css
+++ b/Frontend/src/Components/ArticleList/ArticleList.css
@@ -1,5 +1,5 @@
 Article {
-  margin: auto;
+  margin: 0;
   padding-left: 0;
   padding-right: 0;
   padding-top: auto;
