--- a/Frontend/src/Components/Button/Button.css
+++ b/Frontend/src/Components/Button/Button.css
@@ -1,18 +1,15 @@
 button {
   cursor: pointer;
   text-align: center;
-  width: 14.25%;
+  width: 14.2857142857%;
   height: 2rem;
   font-size: 105%;
-  padding-left: 4rem;
-  padding-right: 4rem;
-  padding-top: auto;
-  padding-bottom: auto;
+  padding: 0;
+  margin: 0;
   background-color: blue;
+  border-radius: 0%;
   color: white;
-  box-shadow: none;
   border-style: none;
-  display: inline-block;
 }
 
 button:hover {
