--- a/Frontend/src/Components/NavBar/NavBar.css
+++ b/Frontend/src/Components/NavBar/NavBar.css
@@ -1,8 +1,6 @@
-nav ul {
+nav {
   padding: 0;
   margin: 0;
   width: 100%;
-  margin-top: 3%;
-  margin-right: 0;
-  padding-left: 0;
+  background-color: black;
 }
